# Launcher_Box

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_mygec_font.h  main.c  汉字表.txt
assets/projects/bird/: desc.txt  main
assets/projects/gy39/: desc.txt  main
assets/projects/hit_mole/: desc.txt  main  score.txt
assets/projects/piano_blocks/: desc.txt
my_code/inc/: app_launcher.h  app_list.h  config.h  launcher.h  lv_my_font.h  ui_manager.h  utils.h
my_code/src/: app_launcher.c  app_list.c  config.c  launcher.c  lv_my_font.c  ui_manager.c  utils.c
